--- a/nodejs_web/index.html
+++ b/nodejs_web/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
   <title>My Game</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <!-- add custom fonts here -->
 </head>
 
 <body>
@@ -10,7 +11,8 @@
   </div>
 
   <!-- third party -->
-  <script type="text/javascript" src="../vendor/jquery.js"></script>
+  <script type="text/javascript" src="jquery.js"></script>
+  <script type="text/javascript" src="sprite.min.js"></script>
   <script type="text/javascript" src="atom.js"></script>
 
   <!-- node.js to web -->
